--- a/src/application/MainLayout.fxml
+++ b/src/application/MainLayout.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -41,6 +42,7 @@
             <Image url="@../../homeicon.png" />
          </image>
       </ImageView>
+      <Button layoutX="156.0" layoutY="136.0" mnemonicParsing="false" text="Button" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
