--- a/src/application/MainLayout.fxml
+++ b/src/application/MainLayout.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -35,6 +34,22 @@
                   <Insets left="50.0" top="20.0" />
                </HBox.margin>
             </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../login.png" />
+               </image>
+               <HBox.margin>
+                  <Insets left="200.0" />
+               </HBox.margin>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../logout.png" />
+               </image>
+               <HBox.margin>
+                  <Insets left="-100.0" top="50.0" />
+               </HBox.margin>
+            </ImageView>
          </children>
       </HBox>
       <ImageView fitHeight="65.0" fitWidth="65.0" layoutX="50.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
@@ -42,7 +57,6 @@
             <Image url="@../../homeicon.png" />
          </image>
       </ImageView>
-      <Button layoutX="156.0" layoutY="136.0" mnemonicParsing="false" text="Button" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
