--- a/bin/application/SecondLayout.fxml
+++ b/bin/application/SecondLayout.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #D8D8D8;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SecondScreen">
+<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="801.0" style="-fx-background-color: #D8D8D8; -fx-border-color: #00FFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SecondScreen">
    <children>
-      <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF;">
+      <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
          <children>
             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -42,7 +44,10 @@
             <Image url="@../../homeicon.png" />
          </image>
       </ImageView>
-      <VBox layoutX="544.0" layoutY="97.0" prefHeight="500.0" prefWidth="255.0" style="-fx-background-color: #FFFFFF;" />
+      <VBox layoutX="549.0" layoutY="102.0" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
+         <children>
+            <Label text="Label" />
+         </children></VBox>
       <ImageView fitHeight="97.0" fitWidth="100.0" layoutX="40.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../Americano.jpeg" />
@@ -103,6 +108,17 @@
             <Image url="@../../Takeaway.jpeg" />
          </image>
       </ImageView>
+      <Spinner layoutX="46.0" layoutY="442.0" prefHeight="33.0" prefWidth="149.0" />
+      <Spinner layoutX="222.0" layoutY="442.0" prefHeight="32.0" prefWidth="149.0" />
+      <VBox layoutX="548.0" layoutY="348.0" prefHeight="249.0" prefWidth="253.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
+         <children>
+            <Label prefHeight="40.0" prefWidth="250.0" text="Subtotal" />
+            <Label prefHeight="40.0" prefWidth="250.0" text="DIscount" />
+            <Label prefHeight="40.0" prefWidth="250.0" text="GST" />
+            <Label prefHeight="40.0" prefWidth="250.0" text="Total" />
+            <Label prefHeight="60.0" prefWidth="250.0" style="-fx-background-color: #00FFFF;" text="Pay" translateY="30.0" />
+         </children>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
