--- a/src/application/MainLayout.fxml
+++ b/src/application/MainLayout.fxml
@@ -52,11 +52,6 @@
             <Image url="@../../homeicon.png" />
          </image>
       </ImageView>
-      <ImageView blendMode="DARKEN" fitHeight="150.0" fitWidth="200.0" layoutX="325.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Documents/coffeeCupLogoIcon.png" />
-         </image>
-      </ImageView>
       <Button alignment="CENTER" contentDisplay="CENTER" layoutX="170.0" layoutY="487.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="153.0" style="-fx-background-color: #FFFFFF;" text="Login" textAlignment="CENTER">
          <font>
             <Font name="Century Gothic" size="16.0" />
@@ -86,6 +81,11 @@
             <Font name="Century Gothic Bold" size="36.0" />
          </font>
       </Label>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="324.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../coffeeCupLogoIcon.png" />
+         </image>
+      </ImageView>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
