Change Screen and Java Names Added and implemented Login Page

--- a/src/application/ReportPageLayout.fxml
+++ b/src/application/ReportPageLayout.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #D8D8D8;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FourthScreen">
+<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #D8D8D8;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.InventoryPage">
    <children>
       <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF;">
          <children>
@@ -18,7 +18,7 @@
                   <Insets left="150.0" top="25.0" />
                </HBox.margin>
             </ImageView>
-            <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#reportPage" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../reporticon.png" />
                </image>
