--- a/src/application/MainLayout.fxml
+++ b/src/application/MainLayout.fxml
@@ -52,7 +52,7 @@
             <Image url="@../../homeicon.png" />
          </image>
       </ImageView>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="170.0" layoutY="487.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="153.0" style="-fx-background-color: #FFFFFF;" text="Login" textAlignment="CENTER">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="170.0" layoutY="487.0" mnemonicParsing="false" onAction="#loginPage" prefHeight="40.0" prefWidth="153.0" style="-fx-background-color: #FFFFFF;" text="Login" textAlignment="CENTER">
          <font>
             <Font name="Century Gothic" size="16.0" />
          </font>
@@ -93,7 +93,4 @@
    <opaqueInsets>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </opaqueInsets>
-   <cursor>
-      <Cursor fx:constant="SW_RESIZE" />
-   </cursor>
 </Pane>
