--- a/src/application/MainLayout.fxml
+++ b/src/application/MainLayout.fxml
@@ -7,51 +7,17 @@
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #90caff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Main">
    <children>
-      <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF;">
-         <children>
-            <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#salesPage" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../sellIicon.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="150.0" top="25.0" />
-               </HBox.margin>
-            </ImageView>
-            <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#reportPage" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../reporticon.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="50.0" top="25.0" />
-               </HBox.margin>
-            </ImageView>
-            <ImageView fitHeight="70.0" fitWidth="70.0" onMouseClicked="#inventoryPage" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../inventory%20icon.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="50.0" top="20.0" />
-               </HBox.margin>
-            </ImageView>
-         </children>
-      </HBox>
       <Circle fill="WHITE" layoutX="400.0" layoutY="320.0" radius="107.0" stroke="TRANSPARENT" strokeType="INSIDE">
          <effect>
             <InnerShadow />
          </effect>
       </Circle>
-      <ImageView fitHeight="65.0" fitWidth="65.0" layoutX="50.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../homeicon.png" />
-         </image>
-      </ImageView>
       <Button alignment="CENTER" contentDisplay="CENTER" layoutX="170.0" layoutY="487.0" mnemonicParsing="false" onAction="#loginPage" prefHeight="40.0" prefWidth="153.0" style="-fx-background-color: #FFFFFF;" text="Login" textAlignment="CENTER">
          <font>
             <Font name="Century Gothic" size="16.0" />
@@ -71,9 +37,9 @@
             <InnerShadow />
          </effect>
       </Button>
-      <Label layoutX="365.0" layoutY="100.0" text="POS System">
+      <Label layoutX="299.0" layoutY="63.0" text="POS System">
          <font>
-            <Font name="Century Gothic" size="12.0" />
+            <Font name="Century Gothic Bold" size="36.0" />
          </font>
       </Label>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="149.0" layoutY="136.0" prefHeight="46.0" prefWidth="501.0" text="welcome to java espresso">
