--- a/bin/layout/SalesPageLayout.fxml
+++ b/bin/layout/SalesPageLayout.fxml
@@ -2,7 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="801.0" style="-fx-background-color: #D8D8D8; -fx-border-color: #00FFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SalesPage">
+<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="801.0" style="-fx-background-color: #D8D8D8; -fx-border-color: #00FFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SalesController">
    <children>
       <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="550.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
          <children>
@@ -114,17 +115,27 @@
             <Image url="@../../Takeaway.jpeg" />
          </image>
       </ImageView>
-      <Spinner layoutX="46.0" layoutY="442.0" prefHeight="33.0" prefWidth="149.0" />
-      <Spinner layoutX="222.0" layoutY="442.0" prefHeight="32.0" prefWidth="149.0" />
-      <VBox layoutX="550.0" layoutY="303.0" prefHeight="300.0" prefWidth="250.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
+      <VBox layoutX="550.0" layoutY="303.0" prefHeight="294.0" prefWidth="250.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
          <children>
             <Label prefHeight="40.0" prefWidth="250.0" text="Subtotal" />
             <Label prefHeight="40.0" prefWidth="250.0" text="DIscount" />
             <Label prefHeight="40.0" prefWidth="250.0" text="GST" />
             <Label prefHeight="40.0" prefWidth="250.0" text="Total" />
-            <Label prefHeight="60.0" prefWidth="250.0" style="-fx-background-color: #00FFFF;" text="Pay" translateY="30.0" />
+            <Label prefHeight="60.0" prefWidth="250.0" style="-fx-background-color: #00FFFF;" text="Pay" translateY="30.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
          </children>
       </VBox>
+      <MenuButton fx:id="coffeeSize" layoutX="57.0" layoutY="463.0" mnemonicParsing="false" text="Size">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Action 1" />
+          <MenuItem mnemonicParsing="false" text="Action 2" />
+        </items>
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font>
+      </MenuButton>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
